package museo.usuarios;

public class Director extends Usuario {
    public Director(String n,String c){ super(n,c); }
}
