package museo.usuarios;

public class RestauradorJefe extends Usuario {
    public RestauradorJefe(String n,String c){ super(n,c); }
}
