package museo.usuarios;

public class Visitante extends Usuario {
    public Visitante(String n,String c){ super(n,c); }
}
